Fixed dependency issues