@@ -37,11 +37,11 @@
   		<artifactId>extentreports</artifactId>
   		<version>5.0.9</version>
 	</dependency>
-	<dependency>
+	<!--<dependency>
 		<groupId>org.example</groupId>
 		<artifactId>restassured</artifactId>
 		<version>1.0-SNAPSHOT</version>
-	</dependency>
+	</dependency>-->
 	<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 	<dependency>
 	    <groupId>com.fasterxml.jackson.core</groupId>
@@ -59,5 +59,54 @@
 	    <artifactId>jackson-annotations</artifactId>
 	    <version>2.19.2</version>
 	</dependency>
+	<dependency>
+	  <groupId>com.github.javafaker</groupId>
+	  <artifactId>javafaker</artifactId>
+	  <version>1.0.2</version>
+	</dependency>
+	<dependency>
+	  	 <groupId>org.projectlombok</groupId>
+	  	 <artifactId>lombok</artifactId>
+	     <version>1.18.32</version>
+	     <scope>provided</scope>
+     </dependency>
+     <dependency>
+	  <groupId>org.json</groupId>
+	  <artifactId>json</artifactId>
+	  <version>20231013</version>
+	</dependency>
+
+
   </dependencies>
+  
+  <build>
+    <plugins>
+      <plugin>
+	  <groupId>org.apache.maven.plugins</groupId>
+	  <artifactId>maven-compiler-plugin</artifactId>
+	  <version>3.13.0</version>
+	  <configuration>
+	    <source>17</source>
+	    <target>17</target>
+	    <fork>true</fork>
+	    <compilerArgs>
+	      <arg>--add-opens</arg>
+	      <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+	      <arg>--add-opens</arg>
+	      <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+	    </compilerArgs>
+	  </configuration>
+	</plugin>
+	<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.2.5</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
